--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,3 +2,8 @@
     .centrado{
          position: absolute; top:50%; left:50%; transform: translate(-50%,-50%); 
     }
+    img{
+         
+        height: 400px;
+        width: 400px;
+    }
